fix alignment of technology list for feature projects

--- a/css/projects.css
+++ b/css/projects.css
@@ -40,6 +40,9 @@
 .project.feature .project-expand-content {
 	display: none;
 }
+.project.feature .project-technology {
+	margin-left: 0;
+}
 
 .project-feature-overlay {
 	background: rgba(0, 0, 0, 0.8);
